crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_refuses_a_date_after_a_posting_flag.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 2299
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --date follows --set Expenses:Groceries: transaction flags go before the first posting
