crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_refuses_one_posting_opened_twice.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: posting 'Expenses:Groceries 30.00 AUD' is named more than once by --set and --remove
