crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_refuses_one_posting_set_twice.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: posting 'Expenses:Groceries 30.00 AUD' is named by more than one --set or --remove
