crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_rejects_setting_and_clearing_one_key.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 1025
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: the transaction: --meta and --clear-meta both name 'note'
