crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_several_postings_match_error.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: several postings match '--remove Expenses:Groceries 10.00 AUD'; pass one of the posting IDs below to pick one: [POSTING_ID] Expenses:Groceries 10.00 AUD, [POSTING_ID] Expenses:Groceries 10.00 AUD, [POSTING_ID] Assets:Checking -20.00 AUD
