crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_transaction_warning.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
assertion_line: 482
expression: output
---
success: true
exit_code: 0
----- stdout -----
Edited transaction: [TRANSACTION_ID]
----- stderr -----
warning: Assets:Checking is dated 2020-01-01 but the account opened on 2024-01-01
