crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_with_no_matching_transaction.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: no transaction on Assets:Checking dated 2026-03-02
