crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_with_two_matching_transactions.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: 2 transactions on Assets:Checking dated 2026-03-01; narrow the selector, or pass one of these transaction IDs:
  [TRANSACTION_ID]  2026-03-01  Grocery shopping: Assets:Checking -50.00 AUD, Expenses:Groceries 30.00 AUD
  [TRANSACTION_ID]  2026-03-01  Grocery shopping: Assets:Checking -50.00 AUD, Expenses:Groceries 30.00 AUD
