crates/bc-cli/tests/cli/snapshots/cli__transaction__edit_without_an_operation.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: nothing to edit: give --add-posting, --set-posting or --remove-posting
